[gd_scene load_steps=107 format=3 uid="uid://bpo4in3r31naa"]

[ext_resource type="Script" path="res://Scripts/etats_crotus/crotus_principal.gd" id="1_7awpa"]
[ext_resource type="Texture2D" uid="uid://bqj4b7jyxmvd4" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Run.png" id="1_sljnc"]
[ext_resource type="Texture2D" uid="uid://55hn4e2hv51y" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Attack.png" id="2_2brn5"]
[ext_resource type="Texture2D" uid="uid://d2lgu60dksvdu" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Idle.png" id="2_kygse"]
[ext_resource type="Texture2D" uid="uid://c804dlemtx8md" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Jump.png" id="2_l8hm2"]
[ext_resource type="Texture2D" uid="uid://d0hhakgqhpn3x" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_TurnAround.png" id="3_shx6k"]
[ext_resource type="Texture2D" uid="uid://rbb71kvklxy4" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Attack2.png" id="3_sotjp"]
[ext_resource type="Texture2D" uid="uid://nym356hoxtv7" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_JumpFallInbetween.png" id="5_b5d82"]
[ext_resource type="Texture2D" uid="uid://c1kw3gidts1j0" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_CrouchAll.png" id="5_bceab"]
[ext_resource type="Texture2D" uid="uid://cliuig5fsdbrl" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Crouch.png" id="5_j44nt"]
[ext_resource type="Texture2D" uid="uid://cplmmiiui1mmj" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_CrouchWalk.png" id="6_ohwq6"]
[ext_resource type="Texture2D" uid="uid://djbeyum3a5njr" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_CrouchTransition.png" id="7_q2pt2"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/machine_etat.gd" id="11_jdaog"]
[ext_resource type="Texture2D" uid="uid://dber84ivi1krv" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Roll.png" id="11_m2jn0"]
[ext_resource type="Texture2D" uid="uid://d2bfdulmv2ag" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_DeathNoMovement.png" id="11_scvw8"]
[ext_resource type="Texture2D" uid="uid://menelj8y84wy" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Fall.png" id="12_i6u14"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/rien.gd" id="12_on6ha"]
[ext_resource type="Texture2D" uid="uid://dpnjob5g28hop" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_Slide.png" id="12_p25pf"]
[ext_resource type="Texture2D" uid="uid://bhfj7wkqldoog" path="res://Assets/Colour2/Outline/120x80_PNGSheets/_SlideTransitionStart.png" id="13_jgya5"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/saut.gd" id="14_wkcid"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/course.gd" id="15_r5m4o"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/en_air.gd" id="16_exgt5"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/glissade.gd" id="19_nuh68"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/saut_x2.gd" id="20_x4jx8"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/acroupie.gd" id="23_ikscw"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/marche_accroupie.gd" id="25_2chou"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/attaque.gd" id="26_vdux6"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/degat.gd" id="27_mjecu"]
[ext_resource type="Script" path="res://Scripts/etats_crotus/Mort.gd" id="29_gdoy4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jf842"]
atlas = ExtResource("2_2brn5")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijfn1"]
atlas = ExtResource("2_2brn5")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r06f"]
atlas = ExtResource("2_2brn5")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6am8c"]
atlas = ExtResource("2_2brn5")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2imq"]
atlas = ExtResource("3_sotjp")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g64ek"]
atlas = ExtResource("3_sotjp")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ag72"]
atlas = ExtResource("3_sotjp")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_evtiv"]
atlas = ExtResource("3_sotjp")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbprb"]
atlas = ExtResource("3_sotjp")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2j5q"]
atlas = ExtResource("3_sotjp")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wke0m"]
atlas = ExtResource("1_sljnc")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fw673"]
atlas = ExtResource("1_sljnc")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hemj4"]
atlas = ExtResource("1_sljnc")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8x37"]
atlas = ExtResource("1_sljnc")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_13lb3"]
atlas = ExtResource("1_sljnc")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_stcvu"]
atlas = ExtResource("1_sljnc")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjrpn"]
atlas = ExtResource("1_sljnc")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pcio"]
atlas = ExtResource("1_sljnc")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dme6v"]
atlas = ExtResource("1_sljnc")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_31r3s"]
atlas = ExtResource("1_sljnc")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_squ82"]
atlas = ExtResource("5_j44nt")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rihm3"]
atlas = ExtResource("5_bceab")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3ood"]
atlas = ExtResource("5_bceab")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2xb8i"]
atlas = ExtResource("7_q2pt2")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6y5yx"]
atlas = ExtResource("6_ohwq6")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdnd8"]
atlas = ExtResource("6_ohwq6")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdmwq"]
atlas = ExtResource("6_ohwq6")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wicjc"]
atlas = ExtResource("6_ohwq6")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_xvyyj"]
atlas = ExtResource("6_ohwq6")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivb10"]
atlas = ExtResource("6_ohwq6")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2yrc"]
atlas = ExtResource("6_ohwq6")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_72y6j"]
atlas = ExtResource("6_ohwq6")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7fu6"]
atlas = ExtResource("2_l8hm2")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2i40u"]
atlas = ExtResource("2_l8hm2")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0k1q"]
atlas = ExtResource("2_l8hm2")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0qv3"]
atlas = ExtResource("3_shx6k")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsei0"]
atlas = ExtResource("3_shx6k")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdnax"]
atlas = ExtResource("3_shx6k")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bfep"]
atlas = ExtResource("11_scvw8")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8pmn"]
atlas = ExtResource("11_scvw8")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjmx0"]
atlas = ExtResource("11_scvw8")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnbrc"]
atlas = ExtResource("11_scvw8")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxjmm"]
atlas = ExtResource("11_scvw8")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kj21"]
atlas = ExtResource("11_scvw8")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2kpp"]
atlas = ExtResource("11_scvw8")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p43b"]
atlas = ExtResource("11_scvw8")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4gif"]
atlas = ExtResource("11_scvw8")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x68ou"]
atlas = ExtResource("11_scvw8")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_6vj5t"]
atlas = ExtResource("2_kygse")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq3n0"]
atlas = ExtResource("2_kygse")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gv6q"]
atlas = ExtResource("2_kygse")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq5m4"]
atlas = ExtResource("2_kygse")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_usaox"]
atlas = ExtResource("2_kygse")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_egwxy"]
atlas = ExtResource("2_kygse")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_mb4wp"]
atlas = ExtResource("2_kygse")
region = Rect2(720, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgfj3"]
atlas = ExtResource("2_kygse")
region = Rect2(840, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8scw"]
atlas = ExtResource("2_kygse")
region = Rect2(960, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2tk7"]
atlas = ExtResource("2_kygse")
region = Rect2(1080, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fe3op"]
atlas = ExtResource("11_m2jn0")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sldu"]
atlas = ExtResource("11_m2jn0")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj3ef"]
atlas = ExtResource("11_m2jn0")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1y8p"]
atlas = ExtResource("11_m2jn0")
region = Rect2(360, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_kcn3d"]
atlas = ExtResource("11_m2jn0")
region = Rect2(480, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pybu2"]
atlas = ExtResource("11_m2jn0")
region = Rect2(600, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_chd7x"]
atlas = ExtResource("5_b5d82")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_58cmj"]
atlas = ExtResource("12_i6u14")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_g36qh"]
atlas = ExtResource("12_i6u14")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5eit"]
atlas = ExtResource("12_i6u14")
region = Rect2(240, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_wk17x"]
atlas = ExtResource("12_p25pf")
region = Rect2(0, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1qla"]
atlas = ExtResource("12_p25pf")
region = Rect2(120, 0, 120, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_uck6g"]
atlas = ExtResource("13_jgya5")
region = Rect2(0, 0, 120, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_p5346"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jf842")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijfn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r06f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6am8c")
}],
"loop": false,
"name": &"crotus_atk_01",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2imq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g64ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ag72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evtiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbprb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2j5q")
}],
"loop": false,
"name": &"crotus_atk_02",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wke0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fw673")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hemj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8x37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_13lb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stcvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjrpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pcio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dme6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31r3s")
}],
"loop": true,
"name": &"crotus_course",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_squ82")
}],
"loop": true,
"name": &"crotus_crouch",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rihm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3ood")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2xb8i")
}],
"loop": true,
"name": &"crotus_crouch_debut",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6y5yx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdnd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdmwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wicjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xvyyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivb10")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s2yrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72y6j")
}],
"loop": true,
"name": &"crotus_crouch_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7fu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2i40u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0k1q")
}],
"loop": true,
"name": &"crotus_en_air",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0qv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsei0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdnax")
}],
"loop": true,
"name": &"crotus_flip",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bfep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8pmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjmx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnbrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxjmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kj21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2kpp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p43b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4gif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x68ou")
}],
"loop": false,
"name": &"crotus_mort",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6vj5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq3n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gv6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq5m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usaox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egwxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mb4wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgfj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8scw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2tk7")
}],
"loop": true,
"name": &"crotus_rien",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fe3op")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sldu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj3ef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1y8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kcn3d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pybu2")
}],
"loop": false,
"name": &"crotus_rolade",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_chd7x")
}],
"loop": false,
"name": &"crotus_saut_debut",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58cmj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g36qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5eit")
}],
"loop": true,
"name": &"crotus_saut_fin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wk17x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1qla")
}],
"loop": true,
"name": &"crotus_slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uck6g")
}],
"loop": false,
"name": &"crotus_slide_debut",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t0obn"]
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uc8gs"]
size = Vector2(33, 18.3)

[sub_resource type="CircleShape2D" id="CircleShape2D_am1fs"]
radius = 21.2132

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bplao"]
height = 44.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_384lq"]
size = Vector2(60, 13)

[node name="crotus_body" type="CharacterBody2D" groups=["joueur"]]
script = ExtResource("1_7awpa")

[node name="crotus_anim" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -18)
sprite_frames = SubResource("SpriteFrames_p5346")
animation = &"crotus_mort"
frame = 9
frame_progress = 1.0

[node name="crotus_coli" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_t0obn")

[node name="crotus_slide_coli" type="CollisionShape2D" parent="."]
position = Vector2(3, 12.85)
shape = SubResource("RectangleShape2D_uc8gs")
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
limit_left = -10
limit_right = 3300
drag_horizontal_enabled = true

[node name="machine_etat" type="Node" parent="." node_paths=PackedStringArray("etat_actuel")]
script = ExtResource("11_jdaog")
etat_actuel = NodePath("rien")

[node name="rien" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("12_on6ha")
acteur = NodePath("../..")

[node name="saut" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("14_wkcid")
acteur = NodePath("../..")

[node name="course" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("15_r5m4o")
acteur = NodePath("../..")

[node name="en_air" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("16_exgt5")
acteur = NodePath("../..")

[node name="glissade" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("19_nuh68")
acteur = NodePath("../..")

[node name="saut_x2" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("20_x4jx8")
acteur = NodePath("../..")

[node name="acroupie" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("23_ikscw")
acteur = NodePath("../..")

[node name="marche_acroupie" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("25_2chou")
acteur = NodePath("../..")

[node name="attaque" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("26_vdux6")
acteur = NodePath("../..")

[node name="degat" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("27_mjecu")
acteur = NodePath("../..")

[node name="mort" type="Node" parent="machine_etat" node_paths=PackedStringArray("acteur")]
script = ExtResource("29_gdoy4")
acteur = NodePath("../..")

[node name="attaque_gauche_zone" type="Area2D" parent="." groups=["attaque_crotus"]]
position = Vector2(37, 1)

[node name="attaque_gauche_colli" type="CollisionShape2D" parent="attaque_gauche_zone" groups=["attaque_crotus"]]
shape = SubResource("CircleShape2D_am1fs")
disabled = true

[node name="attaque_droite_zone" type="Area2D" parent="." groups=["attaque_crotus"]]

[node name="attaque_droite_colli" type="CollisionShape2D" parent="attaque_droite_zone" groups=["attaque_crotus"]]
position = Vector2(-38, 2)
shape = SubResource("CircleShape2D_am1fs")
disabled = true

[node name="detection_attaque" type="Area2D" parent="."]
collision_layer = 15
collision_mask = 15

[node name="detection_attaque_zone" type="CollisionShape2D" parent="detection_attaque"]
shape = SubResource("CapsuleShape2D_bplao")

[node name="crotus_colli_mort" type="CollisionShape2D" parent="."]
position = Vector2(2, 15.5)
shape = SubResource("RectangleShape2D_384lq")
disabled = true

[connection signal="degat_crotus" from="." to="machine_etat/rien" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/saut" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/course" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/en_air" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/glissade" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/saut_x2" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/acroupie" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/marche_acroupie" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/attaque" method="_on_crotus_body_degat_crotus"]
[connection signal="degat_crotus" from="." to="machine_etat/degat" method="_on_crotus_body_degat_crotus"]
[connection signal="mort" from="." to="machine_etat/rien" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/saut" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/course" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/en_air" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/glissade" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/saut_x2" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/acroupie" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/marche_acroupie" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/attaque" method="_on_crotus_body_mort"]
[connection signal="mort" from="." to="machine_etat/degat" method="_on_crotus_body_mort"]
[connection signal="area_entered" from="detection_attaque" to="." method="_on_detection_attaque_area_entered"]
